Fix crash when converting color space with OCIO enabled

The crash happened because of recursive entrance into
KisOpenGLImageTextures when a message box was opened. This
patch removes a message box and adds nitification with a floating
message.

BUG:411045